Fix spacing issues

--- a/style.css
+++ b/style.css
@@ -66,8 +66,8 @@ h1, h2, h3, h4 {
 
 .profile-slot {
     position: relative;
-    width: 150px;
-    height: 150px;
+    width: 200px;
+    height: 200px;
     margin: 0 auto;
     display: flex;
     justify-content: center;
@@ -159,7 +159,7 @@ h1, h2, h3, h4 {
 /* Sections */
 .section-header {
     text-align: center;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
 }
 
 .about {
